--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'core';
+@import 'normalize';
+@import 'colors';
+@import 'theme';
+@import 'typography';
+
+
+body {
+  margin: 0;
+  font-family: Poppins, sans-serif;
+  justify-content: center;
+}
