--- a/src/app/waiting-list/waiting-list.component.scss
+++ b/src/app/waiting-list/waiting-list.component.scss
@@ -6,30 +6,146 @@
   place-items: center;
   width: 100vw;
   height: 100vh;
-  background: var(--colors-background-bg-primary);
+  background: linear-gradient(243deg, rgba(16, 24, 40, 0.10) 0.03%, rgba(16, 24, 40, 0.64) 30.27%, #101828 100.55%),
+  url('../../assets/svg/bg-patterns.svg'),
+  var(--colors-background-bg-primary);
+  background-origin: content-box;
 
   .waiting-list {
     display: grid;
+    width: inherit;
+    max-width: 1219px;
+
+    //height: inherit;
     grid-template-areas:
-    'title video'
-    'copy video';
+        "title video"
+        "copy video"
+        "cta video";
+    //align-items: center;
 
     &__title {
+      //@include apply-border(10);
       grid-area: title;
-      @include apply-border(10);
+      color: var(--colors-text-text-primary_on-brand);
+      font-weight: 700;
+      line-height: 58px;
+      font-size: 59.25px;
+      font-style: normal;
+      align-self: end;
+
+      span {
+        color: var(--colors-background-bg-brand-secondary);
+        font-size: 61.25px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 58px;
+      }
     }
 
     &__copy {
+      //@include apply-border(20);
       grid-area: copy;
-      @include apply-border(20);
+      color: var(--colors-text-text-primary_on-brand);
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 400;
+      max-width: 31ch;
+      line-height: 33px;
+      padding-top: 15px;
 
       &__span {
+        color: var(--colors-component-colors-utility-blue-light-utility-blue-light-600);
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        //line-height: 18px;
       }
     }
 
     &__video {
       grid-area: video;
-      @include apply-border(40);
+      position: relative;
+      cursor: pointer;
+
+      &__tag {
+        position: relative;
+        width: 552px;
+        height: 323px;
+        border: 8px solid var(--colors-background-bg-brand-solid);
+        border-radius: 22px;
+      }
+
+      &__tag::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(255 255 255 / 30%);
+        backdrop-filter: blur(10px);
+      }
+
+
+      &__controls {
+        width: fit-content;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+
+      }
+    }
+
+
+    &__CTA {
+      grid-area: cta;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 24px;
+      align-items: center;
+      padding-bottom: 18px;
+
+
+      input {
+        font-family: Poppins, sans-serif;
+        border-radius: 8.429px;
+        color: var(--colors-text-text-primary_on-brand);
+        border: var(--radius-xxs, 2px) solid #4E5BA6;
+        padding-left: 22.48px;
+        background: #3E4784;
+        height: 59px;
+        width: 320px;
+      }
+
+      input::placeholder {
+        //padding-left: 22.48px;
+        color: #717BBC;
+        font-size: 19.667px;
+        font-style: normal;
+        font-weight: 500;
+      }
+
+      button {
+        display: grid;
+        column-gap: 8px;
+        grid-template-columns: 1fr min-content;
+        border-radius: 7.024px;
+        align-items: center;
+        border: transparent;
+        width: 196.67px;
+        background: #0086C9;
+        height: 59px;
+        padding: 0 21px;
+
+        span {
+          color: #D5D9EB;
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+        }
+      }
     }
   }
 }
