--- a/src/app/waiting-list/waiting-list.component.html
+++ b/src/app/waiting-list/waiting-list.component.html
@@ -8,18 +8,28 @@
 
   <!--    <sub> possible with <span class="waiting-list__copy__span">dynamic templates</span>.</sub>-->
   <!--  </h1>-->
-  <fieldset class="waiting-list__CTA">
-    <input placeholder="mail@hyperxq.com">
-    <button><span>Join waitlist</span>
-      <svg fill="none" height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
-        <path d="M2.21484 9.64282H18.2148M18.2148 9.64282L10.2148 1.64282M18.2148 9.64282L10.2148 17.6428"
-              stroke="#D5D9EB" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-      </svg>
-    </button>
+  <form (ngSubmit)="addToWaitingList()" [formGroup]="form" class="waiting-list__CTA">
+    <input formControlName="email" placeholder="mail@hyperxq.com" type="email">
+    @if (form.controls.email.valid) {
+      <button><span>Join waitlist</span>
+        <svg fill="none" height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
+          <path d="M2.21484 9.64282H18.2148M18.2148 9.64282L10.2148 1.64282M18.2148 9.64282L10.2148 17.6428"
+                stroke="#D5D9EB" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+        </svg>
+      </button>
+    } @else {
 
-  </fieldset>
+      <button disabled><span>Join waitlist</span>
+        <svg fill="none" height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
+          <path d="M2.21484 9.64282H18.2148M18.2148 9.64282L10.2148 1.64282M18.2148 9.64282L10.2148 17.6428"
+                stroke="#D5D9EB" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+        </svg>
+      </button>
+    }
+
+  </form>
   <section (click)="togglevideo()" class="waiting-list__video">
-    <video #video class="waiting-list__video__tag" muted>
+    <video #video class="waiting-list__video__tag" muted preload="auto">
       <source src="../../assets/media/project-builder-2.mp4" type="video/mp4"/>
     </video>
     @if (!videoPlaying) {
